--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@
 
 
             var links = {
-                "ON01": "https://154551220850.duckdns.org",
-                "ON02": "https://154551220851.duckdns.org",
-                "ON03": "https://154551220852.duckdns.org",
-                "ON04": "https://154551220853.duckdns.org",
-                "ON05": "https://154551220854.duckdns.org",
-                "ON06": "https://154551220855.duckdns.org",
-                "ON07": "https://154551220856.duckdns.org",
-                "ON08": "https://154551220857.duckdns.org",
-                "ON09": "https://154551220858.duckdns.org",
-                "ON10": "https://154551220859.duckdns.org",
+                "ACC01": "https://154551220860.duckdns.org",
+                "ACC02": "https://154551220861.duckdns.org",
+                "ACC03": "https://154551220862.duckdns.org",
+                "ACC04": "https://154551220863.duckdns.org",
+                "ACC05": "https://154551220864.duckdns.org",
+                "ACC06": "https://154551220865.duckdns.org",
+                "ACC07": "https://154551220866.duckdns.org",
+                "ACC08": "https://154551220867.duckdns.org",
+                "ACC09": "https://154551220868.duckdns.org",
+                "ACC10": "https://154551220869.duckdns.org",
                 "OON01": "https://74476765776871.duckdns.org",
                 "OON02": "https://74476765776872.duckdns.org",
                 "OON03": "https://74476765776873.duckdns.org",
